Fixes for the open source JSON implementation from json.org that help statisfy lint.