@@ -260,19 +260,19 @@ public class JSONArray {
 	}
 
 	public JSONArray put(double value) throws JSONException {
-		Double d = new Double(value);
+		Double d = Double.valueOf(value);
 		JSONObject.testValidity(d);
 		this.put(d);
 		return this;
 	}
 
 	public JSONArray put(int value) {
-		this.put(new Integer(value));
+		this.put(Integer.valueOf(value));
 		return this;
 	}
 
 	public JSONArray put(long value) {
-		this.put(new Long(value));
+		this.put(Long.valueOf(value));
 		return this;
 	}
 
@@ -297,17 +297,17 @@ public class JSONArray {
 	}
 
 	public JSONArray put(int index, double value) throws JSONException {
-		this.put(index, new Double(value));
+		this.put(index, Double.valueOf(value));
 		return this;
 	}
 
 	public JSONArray put(int index, int value) throws JSONException {
-		this.put(index, new Integer(value));
+		this.put(index, Integer.valueOf(value));
 		return this;
 	}
 
 	public JSONArray put(int index, long value) throws JSONException {
-		this.put(index, new Long(value));
+		this.put(index, Long.valueOf(value));
 		return this;
 	}
 
